syntax = "proto3";

package pb;

import "user.proto";

option go_package = "danielsxiong/simplebank/pb";

message UpdateUserRequest {
  string username = 1;
  string password = 2;
  string full_name = 3;
  string email = 4;
}

message UpdateUserResponse {
  User user = 1;
}